--- a/modulo-01-react-webpack/package.json
+++ b/modulo-01-react-webpack/package.json
@@ -14,6 +14,7 @@
     "webpack-validator": "^3.0.1"
   },
   "dependencies": {
+    "package.json": "^2.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
