adicionando exemplo de eventos

--- a/02 - modulo-01-parte-2/01-learning-props/package.json
+++ b/02 - modulo-01-parte-2/01-learning-props/package.json
@@ -17,5 +17,10 @@
     "package.json": "^2.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
+  },
+  "standard": {
+    "globals": [
+      "alert"
+    ]
   }
 }
