--- a/02-modulo-01-parte-2/03-learning-state/package.json
+++ b/02-modulo-01-parte-2/03-learning-state/package.json
@@ -16,6 +16,7 @@
     "webpack-validator": "^2.2.2"
   },
   "dependencies": {
+    "package.json": "^2.0.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0"
   },
